# cc-error-pages

./: Cargo.toml  README.md  deploy-config.json  deploy-config.yaml  index.html  port_patch.json  tailwind.config.js
locales/: en.json  ru.json
src/: main.rs
