[package]
name = "cc-error-pages"
version = "0.1.1"
edition = "2024"
authors = ["Klimenty Titov <aclo.create@gmail.com>"]

[dependencies]
cc-utils = { git = "https://github.com/markcda/cc-utils.git", tag = "0.5.4", default-features = false, features = ["reqwest"] }
cc-ui-kit = { git = "https://github.com/markcda/cc-ui-kit.git", tag = "0.1.0-alpha-10" }
leptos = { version = "0.7", features = ["csr"] }
leptos_i18n = { version = "0.5", features = ["csr"] }
leptos_meta = "0.7"
web-sys = { version = "0.3", features = ["Document", "Location"] }

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[package.metadata.leptos-i18n]
default = "en"
locales = ["en", "ru"]
